--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
@@ -10,8 +12,7 @@
 
 h1{
     font-size: 44px;
-    color: 000000;
     text-align: center;
     padding-top: 75px;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
 }
