--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,9 @@
 #page{
     width: 100vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1{
@@ -15,4 +18,14 @@ h1{
     text-align: center;
     padding-top: 75px;
     font-family: 'Inter', sans-serif;
+}
+
+#sottotitolo{
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 30px;
+}
+.bold{
+    font-weight: bold;
 }
