--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,7 @@ h1{
     font-size: 18px;
     text-align: center;
     padding-top: 30px;
+    padding-bottom: 32px;
 }
 .bold{
     font-weight: bold;
