--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: #EEF4FF;
 }
 
 h1{
@@ -42,4 +43,21 @@ h1{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.form-element input{
+    width: 340px;
+    height: 52px;
+    border-radius: 15px;
+    border: 1px solid black ;
+    padding-left: 10px;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    text-align: center;
+}
+
+.form-element label{
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    padding-bottom: 10px;
 }
